tests/errors/syn_if7.java
public class syn_if7 {
public static void main(String[] args){
if ( true || false ) {

}
}